cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})

add_subdirectory(include)
add_subdirectory(nlohmann)
add_subdirectory(poco)
add_subdirectory(spdlog)
add_subdirectory(termcolor)

foreach(project chdata check config compile judge run)
    project(${project})
    add_executable(${PROJECT_NAME} source/${PROJECT_NAME}.cpp)
    target_link_libraries(${PROJECT_NAME} Poco::Foundation Poco::Net Poco::Util nlohmann_json::nlohmann_json spdlog::spdlog termcolor::termcolor)
    target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
endforeach()

project(orita VERSION 0.2.0)
configure_file(Oritaconfig.hpp.in Oritaconfig.hpp)
add_executable(${PROJECT_NAME} source/${PROJECT_NAME}.cpp)
target_link_libraries(${PROJECT_NAME} Poco::Foundation Poco::Net Poco::Util nlohmann_json::nlohmann_json spdlog::spdlog termcolor::termcolor)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/include)

if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
    file(WRITE "$ENV{APPDATA}\\Orita\\path.txt" ${CMAKE_BINARY_DIR})
elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    file(WRITE "$ENV{HOME}/.Orita/path.txt" ${CMAKE_BINARY_DIR})
endif()